--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,7 @@ color: var(--accent-text-color);
 .info li:not(:last-child) {
     margin-right: 50px;
 }
+
 .hero{
 background: #C4C4C4;
 background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url("../images/hero.jpg");
@@ -163,9 +164,12 @@ background-size: cover;
 background-position: center;
 max-width: 1600px;
 
+margin-left: auto;
+margin-right: auto;
 padding-bottom: 200px;
 padding-top: 200px;
 text-align: center;
+
 
 }
 
@@ -348,29 +352,27 @@ text-align: center;
 }
 .clients{
     padding-top: 94px;
+    padding-bottom: 94px;
 }
 .clients-item-styles{
-    border: 1px solid #AFB1B8;
     border-radius: 4px;
     max-width: 170px;
 }
-.clients-item-styles:hover,
-.clients-item-styles:focus{
-    border: 1px solid var(--accent-text-color);
-  
-}
+
 .clients-item{
 width: 170px;
 height: 92px;
 display: inline-flex;
 align-items: center;
 justify-content: center;
+border: 1px solid #AFB1B8;
 fill: var(--svg-color-grey);
 
 }
 .clients-item:hover,
 .clients-item:focus{
 fill: var(--accent-text-color);
+border-color: var(--accent-text-color);
 }
 
 .clients-items{
